--- a/visualization/index.html
+++ b/visualization/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='UTF-8' />
-    <title>deck.gl example</title>
+    <title>Uber Data Visualization</title>
     <style>
       body {margin: 0; padding: 0; overflow: hidden;}
     </style>
